test/Fail/Issue2059i.err
Issue2059i.agda:29.13-20: warning: -W[no]RewriteVariablesNotBoundByLHS
obvious  is not a legal rewrite rule, since the following variable
is not bound by the left hand side:
  p
when checking the pragma REWRITE obvious

Issue2059i.agda:38.10-14: error: [UnequalTerms]
The terms
  b ∧ b
and
  false
are not equal at type Bool
when checking that the expression refl has type (b ∧ b) ≡ false
